@@ -25,4 +25,14 @@ class SurfaceTest < Test::Unit::TestCase
       end
     end
   end
+
+  def test_fallback_resolution
+    surface = Cairo::ImageSurface.new(100, 100)
+
+    assert_equal([300.0, 300.0], surface.fallback_resolution)
+
+    only_cairo_version(1, 7, 2)
+    surface.set_fallback_resolution(95, 95)
+    assert_equal([95.0, 95.0], surface.fallback_resolution)
+  end
 end
